8281682: Redundant .ico files in Windows app-image cause unnecessary bloat
Reviewed-by: mdoerr
Backport-of: 45180633d34b6cbb679bae0753d9f422e76d6297